--- a/src/ii/sass/box.sass
+++ b/src/ii/sass/box.sass
@@ -256,14 +256,14 @@ a
 .books-icon_white
   background-position: -5px -5px
 /* FOOTER */
-.footer
+.footer 
   margin-top: 25px
   padding-top: 35px
   background-color: #26a9e0
   font-size: 14px
 
 
-.footer-wrap
+.footer-wrap 
   display: -webkit-box
   display: -ms-flexbox
   display: flex
@@ -272,49 +272,49 @@ a
   justify-content: space-between
 
 
-.footer-section
+.footer-section 
   width: 220px
   padding: 0 10px
   margin-bottom: 30px
   position: relative
 
 
-.footer-section:first-child
+.footer-section:first-child 
   padding-left: 80px
 
 
-.footer-section_subscribe
+.footer-section_subscribe 
   padding: 0 10px
   width: 370px
   position: relative
 
 
-.footer-section__title
+.footer-section__title 
   font-size: 16px
   font-weight: 700
   color: #fff
   margin: 0 0 10px
 
 
-.footer-section__title .books-icon,.footer-section__title i
+.footer-section__title .books-icon,.footer-section__title i 
   vertical-align: bottom
   margin-right: 10px
 
 
-.footer-list
+.footer-list 
   list-style: none
   padding: 7px 0 0
   margin: 0
 
 
-.footer-list__item a
+.footer-list__item a 
   font-size: 14px
   line-height: 18px
   text-decoration: none
   color: #fff
 
 
-.footer__social .text
+.footer__social .text 
   display: inline-block
   margin: 0
   padding: 0
@@ -324,7 +324,7 @@ a
   font-size: 14px
 
 
-.footer__social .social__list
+.footer__social .social__list 
   display: inline-block
   width: 210px
   font-size: 0
@@ -333,13 +333,13 @@ a
   list-style: none
 
 
-.footer__social .social__list a
+.footer__social .social__list a 
   display: inline-block
   width: 100%
   height: 100%
 
 
-.footer__social .social__list .social__btn
+.footer__social .social__list .social__btn 
   margin: 0
   padding: 0
   cursor: pointer
@@ -353,42 +353,42 @@ a
   transition: .2s
 
 
-.footer__social .social__list .social__btn:hover
+.footer__social .social__list .social__btn:hover 
   opacity: 1
   -webkit-transition: .2s
   transition: .2s
 
 
-.footer__social .social__list .social__btn.vk
+.footer__social .social__list .social__btn.vk 
   background-position: 15px 6px
 
 
-.footer__social .social__list .social__btn.fb
+.footer__social .social__list .social__btn.fb 
   background-position: -34px 6px
 
 
-.footer__social .social__list .social__btn.tw
+.footer__social .social__list .social__btn.tw 
   background-position: -78px 6px
 
 
-.footer__social .social__list .social__btn.ok
+.footer__social .social__list .social__btn.ok 
   background-position: -123px 6px
 
 
-.footer__social .social__list .social__btn.in
+.footer__social .social__list .social__btn.in 
   background-position: -167px 6px
 
 
-.footer__social .social__list .social__btn.yb
+.footer__social .social__list .social__btn.yb 
   background-position: -204px 6px
 
 
-.pay-cards
+.pay-cards 
   font-size: 0
   width: 380px
 
 
-.pay-cards .text
+.pay-cards .text 
   display: inline-block
   vertical-align: top
   padding: 0
@@ -397,17 +397,17 @@ a
   color: #fff
 
 
-.pay-cards .pay-cards__card,.pay-cards__logo
+.pay-cards .pay-cards__card,.pay-cards__logo 
   display: inline-block
   height: 25px
   background-color: #fff
 
 
-.pay-cards__logo
+.pay-cards__logo 
   vertical-align: middle
 
 
-.pay-cards .pay-cards__card
+.pay-cards .pay-cards__card 
   width: 40px
   margin: 5px 5px 0 0
   border-radius: 3px
@@ -415,19 +415,19 @@ a
   background-position: 50%
 
 
-.pay-cards .pay-cards__card_visa
+.pay-cards .pay-cards__card_visa 
   background-image: url(/ii/img/partners/visa-mini.png)
   margin-left: 15px
 
 
-.pay-cards .pay-cards__card_mc
+.pay-cards .pay-cards__card_mc 
   background-image: url(/ii/img/partners/mc-mini.png)
 
 
-.pay-cards .pay-cards__card_mir
+.pay-cards .pay-cards__card_mir 
   background-image: url(/ii/img/partners/mir-mini.png)
 
-.subscribe-descr
+.subscribe-descr 
   padding: 5px 0 0
   margin: 0
   color: #fff
@@ -435,12 +435,12 @@ a
   line-height: 20px
 
 
-.subscribe-form
+.subscribe-form 
   margin: 5px 0
 
 
 .subscribe-form .btn_normal,
-.subscribe__input
+.subscribe__input 
   padding: 0 10px
   box-sizing: border-box
   border: none
@@ -449,7 +449,7 @@ a
   line-height: 35px
 
 
-.subscribe-form .btn_normal
+.subscribe-form .btn_normal 
   display: inline-block
   margin-left: 5px
   background-color: #1b75bb
@@ -457,24 +457,41 @@ a
   cursor: pointer
 
 
-.subscribe__input
+.subscribe__input 
   width: 200px
 
-.copyright
+.copyright 
   padding-right: 20px
   padding-left: 80px
   margin-bottom: 25px
   width: 460px
 
 
-.copyright .text
+.copyright .text 
   padding: 0
   margin: 0
   font-size: 12px
   line-height: 14px
   color: rgba(255,255,255,.6)
+  
+.scrollToTop
+  position: fixed
+  bottom: 50px
+  left: 40px
+  display: block
+  width: 60px
+  height: 60px
+  border-radius: 50%
+  background: url(/ii/img/icons/scrollToTop.png) no-repeat 50% 50% rgba(38,169,224,.5)
+  -webkit-transition: .3s
+  transition: .3s
+  cursor: pointer
+  z-index: 100
+
+.scrollToTop:hover 
+  background-color: #26a9e0
     
-/* END FOOTER */
+
 
 @media screen and (max-width: 1550px)
   .circle-1, .circle-6, .circle-4, .circle-5, img.circle-7, .txt__phone
