--- a/src/ii/css/boxes/box.css
+++ b/src/ii/css/boxes/box.css
@@ -7,8 +7,7 @@ html {
   font-size: 18px; }
 
 body {
-  font-family: "PT Sans", sans-serif;
-  color: rgba(0, 0, 0, 0.8); }
+  font-family: "PT Sans", sans-serif; }
 
 a {
   text-decoration: none; }
@@ -157,7 +156,7 @@ a {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 80px; }
+    height: 100%; }
 
 .logo {
   margin: 20px 40px 20px 0; }
@@ -184,8 +183,7 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 20px;
-  font-size: 16px; }
+  margin-right: 20px; }
 
 .menu-item:last-child {
   margin-right: 0; }
