--- a/src/ii/sass/box.sass
+++ b/src/ii/sass/box.sass
@@ -8,6 +8,7 @@ html
 
 body
   font-family: "PT Sans", sans-serif
+  color: rgba(0, 0, 0, 0.8)
 
 a
   text-decoration: none
@@ -141,7 +142,7 @@ a
     display: flex
     justify-content: space-between
     align-items: center
-    height: 100%
+    height: 80px
 .logo
   margin: 20px 40px 20px 0
 .menu
@@ -154,6 +155,7 @@ a
   display: flex
   align-items: center
   margin-right: 20px
+  font-size: 16px
 .menu-item:last-child
   margin-right: 0
 .menu a
