--- a/src/ii/css/box/box.css
+++ b/src/ii/css/box/box.css
@@ -67,6 +67,9 @@ a {
 .blue {
   color: #26A9E0; }
 
+.red {
+  color: #eb001b; }
+
 .title {
   font-weight: bold;
   font-size: 48px;
@@ -77,7 +80,7 @@ a {
   font-size: 24px;
   line-height: 26px;
   text-align: left;
-  margin-bottom: 40px; }
+  margin-bottom: 35px; }
 
 .text_accent {
   font-weight: bold; }
@@ -296,6 +299,18 @@ a {
           align-items: center; }
 
 .img_container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
   width: 560px;
   height: 400px;
