--- a/src/ii/css/boxes/box.css
+++ b/src/ii/css/boxes/box.css
@@ -7,7 +7,8 @@ html {
   font-size: 18px; }
 
 body {
-  font-family: "PT Sans", sans-serif; }
+  font-family: "PT Sans", sans-serif;
+  color: rgba(0, 0, 0, 0.8); }
 
 a {
   text-decoration: none; }
@@ -156,7 +157,7 @@ a {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 100%; }
+    height: 80px; }
 
 .logo {
   margin: 20px 40px 20px 0; }
@@ -183,7 +184,8 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 20px; }
+  margin-right: 20px;
+  font-size: 16px; }
 
 .menu-item:last-child {
   margin-right: 0; }
